# rules_go_runfiles

./: BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  go.mod  go.sum  go_deps.bzl
src/: BUILD  a.go  a_test.go
