module(name = "rules_go_runfiles", version = "0.0.1")

bazel_dep(name = "gazelle", version = "0.29.0")
bazel_dep(name = "rules_go", version = "0.38.1", repo_name = "io_bazel_rules_go")

GO_VERSION = "1.18.3"
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = GO_VERSION,
)
use_repo(go_sdk, "go_sdk_toolchains")
register_toolchains("@go_sdk_toolchains//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
